--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -95,3 +95,18 @@ jobs:
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
+      
+    - name: Upload CodeQL Analysis Results
+      uses: actions/upload-artifact@v2
+      with:
+        name: codeql-results
+        path: /home/runner/work/apollo/results/
+
+    - name: Download Artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: codeql-results # Specify the name of the artifact you want to download
+        path: /home/runner/work/apollo/results/ # Specify the directory where you want to save the downloaded artifact
+
+    - name: Print Run ID
+      run: echo "workflow run id ${{github.run_id}}"
